--- a/hello.html
+++ b/hello.html
@@ -3,15 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first website</title>
-    <link rel="stylesheet" href="style.css" type="text/css"/>
+    <title>Flip treat webcards</title>
+    <!--include CSS style file-->
+    <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Random text refers to a sequence of words, sentences, or characters generated without any specific pattern or meaning, often used as placeholder content in design and publishing.
- The most common example is the "Lorem Ipsum" passage, which has been used as a placeholder in the printing and typesetting industry since the 1500s.
- This text is designed to look like real language but lacks meaningful content, allowing designers and developers to focus on layout and formatting. In Microsoft Word, users can generate random text by typing "=rand(n)" where "n" is the number of paragraphs desired, producing proper English sentences for testing document formats.
- Alternatively, using "=lorem(n)" generates text that resembles English structure but consists of non-meaningful "greeked" words.
- Other methods involve algorithms that analyze existing text to create new random text based on letter frequency and sequence patterns, such as Markov chains, which can produce text that is either gibberish or surprisingly readable depending on the input and processing order.</p>
+<div class="wrapper">
+    <div class="card">
+
+        <div class="front-page">
+            <div class="card-info">
+                <h2 class="card-title">Jessica Jenner</h2>
+                <p class="card-subtitle">100 M followers on instagram</p>
+            </div>
+        </div>
+
+        <div class="back-page">
+            <div class="card-content">
+                <h3>Jessica Jenner</h3>
+                <p class="card-description"> Jessica Jenner is the top model in the world.
+                    Jessica Jenner is an American mannequin. She is also a U.S gold medalist
+                    as a Decathlon winner. She first appeared on the ramp walk of sherr's Hill
+                    spring.</p>
+                    <button class="card-button">Exprole More</button>
+            </div>
+
+        </div>
+    </div>
+
+</div>   
 </body>
 </html>
