--- a/shadowHack/index.html
+++ b/shadowHack/index.html
@@ -17,7 +17,8 @@
 
     <link href="./styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>ShadowHack Tech</title>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <title>ShadowHackTech</title>
 </head>
 
 <body>
